# PersonalVoiceAssistant-Skills

./: README.md
Echo/: CMakeLists.txt  Echo.cpp  Echo.hpp  Echo.json  Skill.hpp  SkillAPI.hpp
